--- a/src/templates/include/basic.html
+++ b/src/templates/include/basic.html
@@ -19,7 +19,7 @@
         <div>
           <nav class="navbar navbar-expand bg-light">
             <div class="col-4">
-              <a href='/'>
+              <a href="{{ url_for('home') }}">
                 <img class="logo" src="{{ url_for('static', filename='img/branding/logo.png') }}">
               </a>
             </div>
@@ -33,21 +33,21 @@
               </div>
             </div>
             
-            <div class="float-right">
-              <span style="padding: 20px">
-                <a href="{{ url_for('signout') }}" style="color: rgba(0, 0, 0, 0);">
-                  <img src="{{ url_for('static', filename='img/button/signout.png') }}" style="width: 30px; height: 30px;">
-                </a>
-              </span>
-              <a href="{{ url_for('userpage') }}">
-                {% if current_user %}
-                  {% if current_user.userpic_url %}
-                    <img class="border rounded-pill" src="{{ url_for('static', filename=current_user.userpic_url) }}" style="width: 50px; height: 50px;">
-                  {% else %}
-                    <img class="border rounded-pill" src="{{ url_for('static', filename='img/placeholder/userpic.png') }}" style="width: 50px; height: 50px;">
-                  {% endif %}
-                {% endif %}
-              </a>
+            <div class="col-2 float-end">
+              <!-- <div class="row float-right"> -->
+                  <a href="{{ url_for('signout') }}" style="color: rgba(0, 0, 0, 0); width:40px; padding: 10px;" >
+                    <img src="{{ url_for('static', filename='img/button/signout.png') }}" style="width: 30px; height: 30px;">
+                  </a>
+                  <a href="{{ url_for('userpage') }}" class="float-right" style="width:60px">
+                    {% if current_user %}
+                      {% if current_user.userpic_url %}
+                        <img class="border rounded-pill" src="{{ url_for('static', filename=current_user.userpic_url) }}" style="width: 50px; height: 50px;">
+                      {% else %}
+                        <img class="border rounded-pill" src="{{ url_for('static', filename='img/placeholder/userpic.png') }}" style="width: 50px; height: 50px;">
+                      {% endif %}
+                    {% endif %}
+                  </a>
+              <!-- </div> -->
             </div>
           </nav>
         </div>
