--- a/src/templates/showcase.html
+++ b/src/templates/showcase.html
@@ -3,7 +3,6 @@
 {% block title %} {{ showcase.title }} {% endblock title %}
 
 {% block content %}
-
 <div class="row border shadow p-3 mb-3 bg-white rounded" style="max-width: 80rem; margin: auto;">
   <div class="col-4">
     <div class="row">
@@ -90,9 +89,9 @@
           <div class="row">
             <div class="col-2">
               {% if showcase.author_userpic_url %}
-                <img class="border rounded-pill" src="{{ url_for('static', filename=showcase.author_userpic_url) }}" width="50px" height="50px" style="margin-left:10px">
+                <img class="border rounded-pill" src="{{ url_for('static', filename=showcase.author_userpic_url) }}" width="50px" height="50px">
               {% else %}
-                <img class="border rounded-pill" src="{{ url_for('static', filename='img/placeholder/userpic.png') }}" width="50px" height="50px" style="margin-left:10px">
+                <img class="border rounded-pill" src="{{ url_for('static', filename='img/placeholder/userpic.png') }}" width="50px" height="50px">
               {% endif %}
             </div>
             <div class="col-6 float-left" style="display: flex; align-items: center; flex-wrap: wrap;">
@@ -149,7 +148,7 @@
 
 {% block scripts %}
 <script>
-  `{% if current_user.id != showcase.author_id %}`
+  '{% if current_user.id != showcase.author_id %}'
   window.addEventListener("load", () => {
     document.getElementById('checkbox_like').addEventListener('change', (event) => {
       const id = parseInt(`{{showcase.id}}`);
@@ -169,7 +168,7 @@
       }
     })
   })
-  `{% endif %}`
+  '{% endif %}'
 
 
   function publishShowcase(id) {
