--- a/src/templates/showcase.html
+++ b/src/templates/showcase.html
@@ -133,7 +133,7 @@
       </div>
     {% else %}
       <div class="form-check form-switch" style="align-items: end">
-        {% if is_liked_by_user %}
+        {% if showcase.is_liked_by_user %}
           <input class="form-check-input" style="width:35px; height: 20px;" type="checkbox" name="like" id="checkbox_like" checked>
         {% else %}
           <input class="form-check-input" style="width:35px; height: 20px;" type="checkbox" name="like" id="checkbox_like">
