--- a/src/templates/signup.html
+++ b/src/templates/signup.html
@@ -5,6 +5,9 @@
 {% endblock title %}
 
 {% block content %}
+{% if error %}
+  <p class=error><strong>Ошибка:</strong> {{ error }}
+{% endif %}
 
 <form action="{{ url_for('signup') }}" method="POST">
   <div class="row" style="margin-top: 200px;">
